--- a/core/templates/core/comunicadosAlumnos.html
+++ b/core/templates/core/comunicadosAlumnos.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'core/home.html' %}
 {% load static %}
 
 {% block content %}
@@ -37,7 +37,7 @@
                 </li>
                 {% else %}
                 <li>
-                    <a class="nav-link" href="comunicados/">Ver comunicados</a>
+                    <a class="nav-link" href="/comunicados/">Ver comunicados</a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
@@ -65,34 +65,63 @@
     </div>
 </nav>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{% static 'core/img/Imagen1.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{% static 'core/img/Imagen2.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+<div>
+ 
+    {% for comunicado in comunicados %}
+    <div class="col-lg-4 col-xs-12 p-2" style="align-items: center;">
+        <div class="card h-200 border-light mb-1" style="max-width: 25rem;  background-color: transparent;">
+            {% if comunicado.tipo == "S" %}
+                <div class="card-header" style="color: white; background-color: #008170;">{{ comunicado.titulo }} | Suspensión de actividades</div>
+            
+            {% elif comunicado.tipo == "C" %} 
+                <div class="card-header" style="color: white; background-color: #005B41;">{{ comunicado.titulo }} | Suspensión de clases</div> 
+                
+            {% else %}    
+                <div class="card-header" style="color: white; background-color: #232D3F;">{{ comunicado.titulo }} | Información</div>
+            {% endif %}
+            <div class="card-body">
+                <h6 class="card-title" style="color: rgb(0, 0, 0); ">{{ comunicado.entidad }}</h6>
+                <h4 class="card-text" style="color: rgb(0, 0, 0);">{{ comunicado.detalle_corto }}</h4>
+                <details style="color: rgb(0, 0, 0); font-size:larger;">
+                    {{ comunicado.detalle }}
+                </details>
+                <p class="card-text" style="color: rgb(0, 0, 0);">Publicado por: <cite title="Source Title">{{ comunicado.publicado_por }}</cite></p>
             </div>
         </div>
-    </div>
+    </div>   
+    
+    {% endfor %}
+
 </div>
 
-<footer class="footer mt-auto py-3 custom-footer">
-    <div class="container">
-        <span class="text-muted">&copy; Scholar Flame</span>
-    </div>
-</footer>
+
+
+
+
+
+
+
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
